--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,59 +1,74 @@
 a {
-  color: var(--link-color);
-  &:hover,
-  &:focus-visible {
-    color: var(--active-link-color);
-  }
+	color: var(--link-color);
+	&:hover,
+	&:focus-visible {
+		color: var(--active-link-color);
+	}
 }
 
 .main-navigation {
-  text-transform: uppercase;
-  font-family: var(--font-karla);
-  margin-inline-start: auto;
+	text-transform: uppercase;
+	font-family: var(--font-karla);
+	margin-inline-start: auto;
+	position: relative;
+	z-index: 40;
+	width: 100vw;
+	padding: 0px;
+	margin: 0px;
 
-  .main-navigation__button {
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    padding: 0.25rem 0.5rem;
-    background-color: var(--honeydew);
-    color: var(--link-color);
-    box-shadow: var(--shadow-4);
-    border: 1px solid black;
-    svg {
-      width: 1.5rem;
-      height: 1.5rem;
-    }
-    &:hover,
-    &:focus-visible {
-      color: var(--active-link-color);
-    }
-  }
+	.main-navigation__button {
+		display: flex;
+		align-items: center;
+		font-size: 1rem;
+		padding: 0.25rem 0.5rem;
+		background-color: var(--honeydew);
+		color: var(--link-color);
+		box-shadow: var(--shadow-4);
+		border: 1px solid black;
+		svg {
+			width: 1.5rem;
+			height: 1.5rem;
+		}
+		&:hover,
+		&:focus-visible {
+			color: var(--active-link-color);
+		}
+	}
 
-  .main-navigation__list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style: none;
-    background-color: palegoldenrod;
-    gap: 0.5em;
-    padding: var(--size-fluid-3);
-    margin: 0;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    left: 0;
-  }
+	.main-navigation__list {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		list-style: none;
+		background-color: palegoldenrod;
+		gap: 0.5em;
+		padding: var(--size-fluid-3);
+		margin: 0;
+		position: absolute;
+		top: 100%;
+		right: 0;
+		left: 0;
+		/* width: 100vw; */
+		padding-left: 0px;
+		padding-right: 0px;
+		margin-top: 32px;
+	}
 
-  .main-navigation__link {
-    text-decoration: none;
-    transition: color 0.5s ease;
-    font-size: 2rem;
-    &.main-navigation__link--current,
-    &[aria-current='page'],
-    &:hover,
-    &:focus {
-      color: var(--black);
-    }
-  }
+	.main-navigation__link {
+		text-decoration: none;
+		transition: color 0.5s ease;
+		font-size: 2rem;
+		&.main-navigation__link--current,
+		&[aria-current='page'],
+		&:hover,
+		&:focus {
+			color: var(--black);
+		}
+	}
+}
+.main-navigation__logo {
+	margin-left: 20px;
+}
+.user-info {
+	margin-right: 20px;
 }
