--- a/css/typographie.css
+++ b/css/typographie.css
@@ -15,7 +15,8 @@
 body {
 	color: var(--text-color);
 	font-size: var(--step-0);
-	font-family: var(--font-merriweather);
+	/* font-family: var(--font-merriweather); */
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Klassennamen wie .h2 ermöglichen es leicht, die semantisch
