add_delete_profile

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -3,4 +3,5 @@
 @import './leaflet.css';
 @import './downshift.css';
 @import './chatpage.css';
+@import './delete-profil-modal.css';
 /* @import './userpage.css'; */
