--- a/css/components/index.css
+++ b/css/components/index.css
@@ -4,4 +4,5 @@
 @import './downshift.css';
 @import './chatpage.css';
 @import './delete-profil-modal.css';
+@import './filter.css';
 /* @import './userpage.css'; */
