--- a/css/components/index.css
+++ b/css/components/index.css
@@ -5,4 +5,5 @@
 @import './chatpage.css';
 @import './delete-profil-modal.css';
 @import './filter.css';
+@import './likebutton.css';
 /* @import './userpage.css'; */
