--- a/css/navigation.css
+++ b/css/navigation.css
@@ -76,3 +76,19 @@ a {
 .unread-messages-button {
 	margin: 10px;
 }
+.avatar-container {
+	width: 32px;
+	height: 32px;
+	position: relative;
+	border-radius: 50%;
+	overflow: hidden;
+	margin-right: 0.5rem; /* аналог mr-2 */
+}
+.user-greeting {
+	margin-right: 1rem; /* аналог mr-4 */
+	font-size: 0.875rem; /* аналог text-sm */
+}
+.user-actions-container {
+	display: flex;
+	align-items: center;
+}
