--- a/css/navigation.css
+++ b/css/navigation.css
@@ -45,6 +45,8 @@ a {
 		align-items: center;
 		list-style: none;
 		background-color: rgba(0, 255, 242, 0.774);
+		backdrop-filter: blur(10px);
+		/* -webkit-backdrop-filter: blur(10px); */
 		gap: 0.5em;
 		padding: var(--size-fluid-3);
 		margin: 0;
